# a2l_exp_baxter_core

./: CMakeLists.txt  README.md  package.xml  setup.py
src/: experiment_a2l.py  experiment_discretization.py  run_baxter_exp.py  run_baxter_high_level_exp.py  run_baxter_low_level_exp.py  simulation_parameters.py
src/generated_files/: BN_directed_hard-coded.bif  BN_directed_hillclimbing.bif  directed_discr_wps.csv
src/lib/: a2l_core_lib
src/lib/experiment_lib/: clusterization.py  dataset_directed_extended.py  dataset_directed_traj.py  dataset_directed_traj_2_init_pos.py  dataset_generation.py  dataset_random.py  dataset_random_3D.py  dataset_stats.py  discretize.py  discretize_distance_hand_coded.py  discretize_distance_sections.py  discretize_effect.py  discretize_inclination_sections.py  discretize_move.py  discretize_orientation_hand_coded.py  discretize_orientation_sections.py  environment_delta.py  environment_dynamics.py  environment_setup.py  inference.py  inference_ros.py  learning.py  ros_services.py  traj_callback.py  validation.py
src/old/: bezier.py  directed_trajs.py  discretize_using_sectors.py  generate_dataset_BN_old.py  heatmap.py  kmeans.py  new_stats.py  performance_stats.py  spline.py  xmeans.py
src/plots/: diverse_traj.py  plot_trajectories.py
src/script/: BN_directed.ipynb  BN_extended.ipynb  BN_random.ipynb  box_plot.py  execute_traj.py  gen_bar_chart.py  learnBN.ipynb  parallel.py  parallel_external_program.py  plot_gaussian.py  simpleBN.py  spline_gen.py
src/script/.ipynb_checkpoints/: BN_directed-checkpoint.ipynb  (+3 more)
